[package]
name = "yojson-rs"
version = "0.1.0"
authors = ["puripuri2100 <puripuri2100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117", features = ["derive"] }
serde_derive = "1.0.117"
pest = "2.1.3"
pest_derive = "2.1.0"
